{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 471,
  "lineage": "08d6e7e1-485f-2b9f-930e-08ce84ec6dfd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0402bb9cc1447b008",
            "public_dns": "ec2-3-7-243-143.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.243.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:internet-gateway/igw-097dfefb8efc24372",
            "id": "igw-097dfefb8efc24372",
            "owner_id": "073419573770",
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:loadbalancer/app/alb/6408aa4705195521",
            "arn_suffix": "app/alb/6408aa4705195521",
            "dns_name": "alb-1617189424.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:loadbalancer/app/alb/6408aa4705195521",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-0b93fc87602038f50"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0155d64594cd18d00"
              },
              {
                "subnet_id": "subnet-0c5adadd35fc46f83"
              }
            ],
            "subnets": [
              "subnet-0155d64594cd18d00",
              "subnet-0c5adadd35fc46f83"
            ],
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:listener/app/alb/6408aa4705195521/455b9c529ad22170",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:targetgroup/tg/c323605fdbdd324e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:listener/app/alb/6408aa4705195521/455b9c529ad22170",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:loadbalancer/app/alb/6408aa4705195521",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:targetgroup/tg/c323605fdbdd324e",
            "arn_suffix": "targetgroup/tg/c323605fdbdd324e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:073419573770:targetgroup/tg/c323605fdbdd324e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "terraform-alb",
              "tier": "dev"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0402bb9cc1447b008",
            "id": "nat-0a3a20c896668271f",
            "network_interface_id": "eni-038bfbd3ef9db8c6e",
            "private_ip": "10.0.0.121",
            "public_ip": "3.7.243.143",
            "subnet_id": "subnet-0155d64594cd18d00",
            "tags": {
              "Name": "terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fadac9a1373e641d",
            "owner_id": "073419573770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a3a20c896668271f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-069c6e1dc7e5d0d09",
            "owner_id": "073419573770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097dfefb8efc24372",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2500975b82c834",
            "route_table_id": "rtb-0fadac9a1373e641d",
            "subnet_id": "subnet-044393e32ab579fac"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256bf693fe4f5907",
            "route_table_id": "rtb-069c6e1dc7e5d0d09",
            "subnet_id": "subnet-0155d64594cd18d00"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea14cbaab9d0d69c",
            "route_table_id": "rtb-069c6e1dc7e5d0d09",
            "subnet_id": "subnet-0c5adadd35fc46f83"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rt",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:security-group/sg-0b93fc87602038f50",
            "description": "Allow internet traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b93fc87602038f50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-sg",
            "name_prefix": null,
            "owner_id": "073419573770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:security-group/sg-00203ec01d4a5a451",
            "description": "Allow all traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00203ec01d4a5a451",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-sg",
            "name_prefix": null,
            "owner_id": "073419573770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:subnet/subnet-044393e32ab579fac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-044393e32ab579fac",
            "map_public_ip_on_launch": false,
            "owner_id": "073419573770",
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:subnet/subnet-0155d64594cd18d00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0155d64594cd18d00",
            "map_public_ip_on_launch": false,
            "owner_id": "073419573770",
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:subnet/subnet-0c5adadd35fc46f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c5adadd35fc46f83",
            "map_public_ip_on_launch": false,
            "owner_id": "073419573770",
            "tags": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0d4f472944196cf2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073419573770:vpc/vpc-0d4f472944196cf2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d525d03aa5f4227",
            "default_route_table_id": "rtb-0642b9c18e00346c9",
            "default_security_group_id": "sg-0f398dadf20049fdf",
            "dhcp_options_id": "dopt-3dac6956",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d4f472944196cf2c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0642b9c18e00346c9",
            "owner_id": "073419573770",
            "tags": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}